💄 styles: revert min width to fix alignment

--- a/src/components/dashboard/cards/cards.scss
+++ b/src/components/dashboard/cards/cards.scss
@@ -19,7 +19,7 @@ $maxCardWidth: 700px;
         padding-left: $offsetBetweenCards;
         max-width: #{$maxCardWidth + $offsetBetweenCards};
         width: calc(50% - 15px);
-        min-width: 400px;
+        min-width: 320px;
     }
 }
 
